G2-1148 Restore unit tests