@@ -5,12 +5,14 @@ import org.junit.Test;
 
 public class TestStandardIdentity {
 	@Test
+	@SuppressWarnings("deprecation")
 	public void equals() {
-		Assert.assertTrue(IIdentity.standard().equals(Integer.valueOf(0), Integer.valueOf(0)));
+		Assert.assertTrue(IIdentity.standard().equals(new Integer(0), new Integer(0)));
 	}
 
 	@Test
+	@SuppressWarnings("deprecation")
 	public void hash() {
-		Assert.assertEquals(IIdentity.standard().hashCode(Integer.valueOf(0)), IIdentity.standard().hashCode(Integer.valueOf(0)));
+		Assert.assertEquals(IIdentity.standard().hashCode(new Integer(0)), IIdentity.standard().hashCode(new Integer(0)));
 	}
 }
